--- a/src/App.css
+++ b/src/App.css
@@ -3,23 +3,26 @@
 
 * {
   margin: 0;
-  border: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 :root {
   --font-roboto: "Roboto Slab", serif;
   --font-raleway: "Raleway", sans-serif;
+  --color-primary: #244b96;
+  --color-secondary: #ff7f50;
+  --color-background: #f8f8f8;
+  --color-text: #333333;
 }
 
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  background-color: var(--color-background);
 }
 
 .app {
   padding: 4rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,11 +32,7 @@ body {
 h1 {
   font-size: 3rem;
   letter-spacing: 0.9px;
-  background: linear-gradient(
-    90deg,
-    rgba(249, 211, 180, 1) 0%,
-    rgba(249, 211, 180, 0) 100%
-  );
+  background: linear-gradient(90deg, var(--color-primary) 0%, rgba(249, 211, 180, 0) 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -43,16 +42,13 @@ h1 {
 .search {
   width: 71%;
   margin: 4rem 0 2rem;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   padding: 1.5rem 1.75rem;
   border-radius: 3rem;
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  background: var(--color-background);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 .search input {
@@ -62,10 +58,9 @@ h1 {
   font-family: var(--font-raleway);
   font-weight: 500;
   padding-right: 1rem;
-
   outline: none;
-  color: #a1a1a1;
-  background: #1f2123;
+  color: var(--color-text);
+  background: var(--color-background);
 }
 
 .search img {
@@ -74,25 +69,9 @@ h1 {
   cursor: pointer;
 }
 
-/* .search button {
-  padding: 20px 40px;
-  border-radius: 0.5rem;
-  margin-left: 15px;
-  color: #a1a1a1;
-  font-family: var(--font-raleway);
-  font-weight: 900;
-  letter-spacing: 0.75px;
-  font-size: 1.25rem;
-  cursor: pointer;
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-} */
-
 .empty {
   width: 100%;
   margin-top: 3rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,95 +79,58 @@ h1 {
 
 .empty h2 {
   font-size: 1.25rem;
-  color: #f9d3b4;
+  color: var(--color-text);
   font-family: var(--font-raleway);
 }
 
 .container {
   width: 100%;
   margin-top: 3rem;
-
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
-.movie {
+.product {
   width: 310px;
-  height: 460px;
-  margin: 1.5rem;
-
-  position: relative;
+  height: auto;
+  padding: 1.5rem;
+  background-color: #ffffff;
   border-radius: 12px;
-  overflow: hidden;
-  border: none;
-
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
-  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
 
-.movie div:nth-of-type(1) {
-  position: absolute;
-  padding: 16px;
-  width: 100%;
-  opacity: 0;
-  top: 0;
-  color: #f9d3b4;
-}
-
-.movie:hover {
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+.product:hover {
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
   transform: scale(1.05, 1.05);
 }
 
-.movie div:nth-of-type(2) {
+.product img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
-.movie div:nth-of-type(2) img {
-  height: 100%;
-  width: 100%;
+.product-info {
+  margin-top: 1rem;
 }
 
-.movie div:nth-of-type(3) {
-  z-index: 2;
-  background-color: #343739;
-  padding: 16px 24px 24px 24px;
-
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
+.product-title {
+  font-family: "Roboto Slab", serif;
+  font-size: 1.25rem;
+  color: var(--color-text);
 }
 
-.movie div:nth-of-type(3) span {
+.product-category {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   font-size: 13px;
   letter-spacing: 2px;
   font-weight: 500;
-  color: #f0f0f0;
-}
-
-.movie div:nth-of-type(3) h3 {
-  margin-top: 5px;
-  font-family: "Roboto Slab", serif;
-  color: #f9d3b4;
-}
-
-.movie:hover div:nth-of-type(2) {
-  height: 100%;
-  opacity: 0.3;
-}
-
-.movie:hover div:nth-of-type(3) {
-  background-color: transparent;
-}
-
-.movie:hover div:nth-of-type(1) {
-  opacity: 1;
+  color: var(--color-primary);
+  margin-top: 0.5rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -209,6 +151,10 @@ h1 {
     width: 20px;
     height: 20px;
   }
+
+  .container {
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -224,8 +170,18 @@ h1 {
     margin-top: 2rem;
   }
 
-  .movie {
-    width: "100%";
-    margin: 1rem;
+  
+
+.product {
+  width: 200px;
+  height: 300px;
+  padding: 1.5rem;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1); /* Add a placeholder value for the box-shadow property */
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+}
+  .product {
+    width: 100%;
   }
 }
